# PhDProject

./: .gitignore  CMakeLists.txt
src/: .ycm_extra_conf.py  CMakeLists.txt  Cardiac Anatomy  image_info.json  simple_example.xml
src/Apps/: CMakeLists.txt
src/Apps/DataPrep/: .CMakeLists.txt.swp  .CineExtractor.cpp.swp  .DicomRewriter.cpp.swp  .SortIRESOutput.cpp.swp  AlignImages.cpp  AlignShapes.cpp  BuildManifoldShapeModel.cpp  CMakeLists.txt  CineExtractor.cpp  ComputeDistanceMaps.cpp  ComputeSeriesTransformToOrigin.cpp  DicomRewriter.cpp  FeatureLearning.cpp  FeatureLearning.h  LearnGMMs.cpp  NonRigidShapeAlignment.cpp  ResampleLabelImages.cpp  SortIRESOutput.cpp  ThresholdFunction.cpp  VolumePointPicker.cpp
src/Apps/DicomSorter/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SeriesExtractor.cpp  SeriesExtractor.h  VolumeGrouper.cpp  VolumeGrouper.h  common.h  main.cpp
src/Apps/PlaneFinder/: .CMakeLists.txt.swp  .containers.cpp.swp  .containers.h.swp  .data_loader.cpp.swp  .data_loader.h.swp  .image_viewer.cpp.swp  .image_viewer.h.swp  .io.cpp.swp  .io.h.swp  .line.cpp.swp  .line.h.swp  .line_list.cpp.swp  .line_list.h.swp  .main.cpp.swp  .main_window.cpp.swp  .main_window.h.swp  .point_picker.cpp.swp  .point_picker.h.swp  CMakeLists.txt  common.h  containers.cpp  containers.h  data_loader.cpp  data_loader.h  dicom_parser.cpp  dicom_parser.h  image_exporter.cpp  image_exporter.h  image_list.cpp  image_list.h  image_viewer.cpp  image_viewer.h  io.cpp  io.h  key_controls.cpp  key_controls.h  line.cpp  line.h  line_list.cpp  line_list.h  (+7 more)
src/Apps/Segmentationgenerator/: .InitialTransformExtractor.cpp.swp  .common.h.swp  .functions.cpp.swp  .functions.h.swp  .main.cpp.swp  CMakeLists.txt  InitialTransformExtractor.cpp  InitialTransformExtractor.h  NormaliseImageFilter.h  common.h  functions.cpp  functions.h  main.cpp  read_series_transforms.cpp  read_series_transforms.h  transforms.cpp  transforms.h
src/Apps/Testing/: CMakeLists.txt  DOGTest.cpp  DiffusionMapTest.cpp  InitTesting.cpp  MRFTest.cpp  PatientDataTest.cpp
src/Apps/ValveTracking/: BadTracking.cpp  CMakeLists.txt  ComputeAlignedPlanes.cpp  ComputeLineLengths.cpp  ComputeNewPlanes.cpp  CreatePatches.cpp  CreatePointLocations.cpp  DataSorter.cpp  ExtractPatch.cpp  ExtractTrainingFeatures.cpp  ExtractTrainingFeatures.h  ExtractTrainingFeaturesFunctions.cpp  FeatureTest.cpp  Fitting.cpp  Fitting2.cpp  FittingFunctions.cpp  FittingFunctions.h  FlipPoints.cpp  MeanShiftTest.cpp  ModelTest.cpp  (+22 more)
src/Filters/: CMakeLists.txt  ClusterDistributionGenerator.h  ClusterDistributionGenerator.hpp  DoGKeyPointExtractor.h  DoGKeyPointExtractor.hpp  FeatureClusterCuller.h  FeatureClusterCuller.hpp  FeatureClusterLearner.h  FeatureClusterLearner.hpp  FeatureCommon.h  FeaturePointGrouper.h  FeaturePointGrouper.hpp  HistogramOfGradientsFeatureExtractor.h  HistogramOfGradientsFeatureExtractor.hpp  ImagePatchExtractor.h  ImagePatchExtractor.hpp  ImageToDoGImageFilter.h  ImageToDoGImageFilter.hpp  KeyPointOrientator.h  KeyPointOrientator.hpp  StructureTensorKeyPointValidator.h  StructureTensorKeyPointValidator.hpp
src/MRFLib/: CMakeLists.txt  graph.h
src/Manifold/: CMakeLists.txt  DiffusionMap.cpp  DiffusionMap.h  ImageToImageDistanceMeasure.h  ImageToImageDistanceMeasure.hpp  ImageToImageHeavisideDistanceMeasure.h  ImageToImageHeavisideDistanceMeasure.hpp  Manifold.h  ManifoldShapeModel.h  ManifoldShapeModel.hpp  ShapeEmbedder.h  ShapeEmbedder.hpp  ShapeEntropyCalculator.h  ShapeEntropyCalculator.hpp  ShapeGenerator.h  ShapeGenerator.hpp  SimilarityMatrixBuilder.h  SimilarityMatrixBuilder.hpp
src/Python/: FilenameGenerator.py  SortDicom.py
src/Registration/: CMakeLists.txt  KappaStatisticImageToImageMetric.h  KappaStatisticImageToImageMetric.hpp  KappaStatisticImageToImageMetric.hpp~  KappaStatisticImageToImageMetric.h~  MRFImageRegistrationMethod.h  MRFImageRegistrationMethod.hpp  MRFImageRegistrationMethodConnectivityFilter.h  MRFImageRegistrationMethodConnectivityFilter.hpp  MRFImageRegistrationMethodLabelGenerator.h  MRFImageRegistrationMethodLabelGenerator.hpp  MRFMeanSquaredUnaryPotentialsMetric.h  MRFMeanSquaredUnaryPotentialsMetric.hpp  MRFUnaryPotentialsMetricBase.h  MRFUnaryPotentialsMetricBase.hpp
src/SVM/: CMakeLists.txt  svm.cpp
src/Segmentation/: .MRFPriorGenerator.hpp.swp  CMakeLists.txt  MRFDataTermBase.h  MRFGMMDataTerm.h  MRFGMMDataTerm.hpp  MRFImageLabeller.h  MRFImageLabeller.hpp  MRFIsingSmoothnessTerm.h  MRFIsingSmoothnessTerm.hpp  MRFLabelAlignment.h  MRFLabelAlignment.hpp  MRFPriorGenerator.h  MRFPriorGenerator.hpp  MRFPriorTermBase.h  MRFSegmentation.h  MRFSegmentation.hpp  MRFSmoothnessTermBase.h  MRFTermBase.h
src/Utils/: CMakeLists.txt  CardiacDicomExtractor.cpp  CardiacDicomExtractor.h  CommonDefinitions.h  ConfigParser.cpp  ConfigParser.h  DicomParser.cpp  DicomParser.h  Directory.cpp  Directory.h  FilenamesReader.cpp  FilenamesReader.h  Helpers.h  Helpers.hpp  ImageIO.h  ImageIO.hpp  Knn.h  MatrixCommon.h  MatrixIO.cpp  MatrixIO.h  MatrixReader.cpp  MatrixReader.h  MatrixWriter.cpp  MatrixWriter.h  PatientData.cpp  PatientData.h  RegistrationHelpers.cpp  RegistrationHelpers.h  SeriesExtractor.cpp  SeriesExtractor.h  VonMisesDistribution.cpp  VonMisesDistribution.h
src/ValveTracking/: BinaryPatchFeatureExtractor.cpp  BinaryPatchFeatureExtractor.h  BoundingBox.cpp  BoundingBox.h  CMRFileExtractor.cpp  CMRFileExtractor.h  CMakeLists.txt  CandidateLineFinder.cpp  CandidateLineFinder.h  ComputeProbImage.cpp  ComputeProbImage.h  FeatureExtractor.cpp  FeatureExtractor.h  FlipChecker.cpp  FlipChecker.h  InitialParticleGenerator.cpp  InitialParticleGenerator.h  JsonConverter.cpp  JsonConverter.h  JsonReader.cpp  JsonReader.h  LBPFeatureExtractor.cpp  LBPFeatureExtractor.h  LengthData.cpp  LengthData.h  LineIntersectionFinder.cpp  LineIntersectionFinder.h  OpenCVValve.cpp  OpenCVValve.h  ParameterHelpers.cpp  ParameterHelpers.h  PatchExtractor.cpp  PatchExtractor.h  PatchExtractor2.h  PatchExtractor2.hpp  PatchTrainingData.cpp  PatchTrainingData.h  PointData.cpp  PointData.h  PointLocations.cpp  (+30 more)
(+78 files in other folders)
