#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(IReSISD, 1.0, csatmp@bristol.ac.uk)
AM_INIT_AUTOMAKE

if test -z ${CXXFLAGS=-O2}; then
    CXXFLAGS='-O2'
fi
AC_PROG_CXX

# Checks for programs.
AC_PROG_CXX
AC_PROG_MAKE_SET

# Checks for libraries.
# FIXME: Replace `main' with a function in `-ldcmdata':
AC_CHECK_LIB([dcmdata], [main])
# FIXME: Replace `main' with a function in `-lfftw3':
AC_CHECK_LIB([fftw3], [main])
# FIXME: Replace `main' with a function in `-lfftw3_threads':
AC_CHECK_LIB([fftw3_threads], [main])
# FIXME: Replace `main' with a function in `-lgomp':
AC_CHECK_LIB([gomp], [main])
# FIXME: Replace `main' with a function in `-lnifticdf':
AC_CHECK_LIB([nifticdf], [main])
# FIXME: Replace `main' with a function in `-lniftiio':
AC_CHECK_LIB([niftiio], [main])
# FIXME: Replace `main' with a function in `-loflog':
AC_CHECK_LIB([oflog], [main])
# FIXME: Replace `main' with a function in `-lofstd':
AC_CHECK_LIB([ofstd], [main])
# FIXME: Replace `main' with a function in `-lopencv_calib3d':
AC_CHECK_LIB([opencv_calib3d], [main])
# FIXME: Replace `main' with a function in `-lopencv_contrib':
AC_CHECK_LIB([opencv_contrib], [main])
# FIXME: Replace `main' with a function in `-lopencv_core':
AC_CHECK_LIB([opencv_core], [main])
# FIXME: Replace `main' with a function in `-lopencv_features2d':
AC_CHECK_LIB([opencv_features2d], [main])
# FIXME: Replace `main' with a function in `-lopencv_flann':
AC_CHECK_LIB([opencv_flann], [main])
# FIXME: Replace `main' with a function in `-lopencv_gpu':
AC_CHECK_LIB([opencv_gpu], [main])
# FIXME: Replace `main' with a function in `-lopencv_highgui':
AC_CHECK_LIB([opencv_highgui], [main])
# FIXME: Replace `main' with a function in `-lopencv_imgproc':
AC_CHECK_LIB([opencv_imgproc], [main])
# FIXME: Replace `main' with a function in `-lopencv_legacy':
AC_CHECK_LIB([opencv_legacy], [main])
# FIXME: Replace `main' with a function in `-lopencv_ml':
AC_CHECK_LIB([opencv_ml], [main])
# FIXME: Replace `main' with a function in `-lopencv_objdetect':
AC_CHECK_LIB([opencv_objdetect], [main])
# FIXME: Replace `main' with a function in `-lopencv_video':
AC_CHECK_LIB([opencv_video], [main])
# FIXME: Replace `main' with a function in `-lteem':
AC_CHECK_LIB([teem], [main])

# Checks for header files.
AC_CHECK_HEADERS([limits.h stddef.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_C_RESTRICT
AC_TYPE_SIZE_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_CHECK_FUNCS([bzero floor memset pow sqrt strchr])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
